# bevy_terrain

./: .gitignore  Cargo.toml  LICENSE  LICENSE-MIT  README.md
assets/shaders/: advanced.wgsl  basic.wgsl  planar.wgsl  simpler.wgsl  spherical.wgsl  terrain.wgsl  test.wgsl
docs/: development.md  implementation.md
examples/: advanced.rs  basic.rs  basic2.rs  geodesy_geometric.rs  minimal.rs  planar.rs  planar_png.rs  precision_demo.rs  preprocess.rs  preprocess_planar.rs  preprocess_planar_png.rs  preprocess_spherical.rs  simpler.rs  spherical.rs  terrain.rs
examples/planar/: advanced.rs  basic.rs  preprocess_planar.rs
examples/spherical/: preprocess_spherical.rs  preprocess_test.rs  spherical.rs  test.rs
preprocess/: Cargo.toml  LICENSE-MIT  README.md
preprocess/examples/: preprocess_earth.rs  preprocess_los.rs  preprocess_spherical.rs  preprocess_swiss.rs
preprocess/src/: cli.rs  dataset.rs  downsample.rs  fill_no_data.rs  gdal_extension.rs  lib.rs  main.rs  reproject.rs  result.rs  split.rs  stitch.rs  transformers.rs
src/: attachment.rs  attachment_loader.rs  attachments.rs  big_space.rs  bundle.rs  bundles.rs  clipmap.rs  collider.rs  compute.rs  compute_phase.rs  config.rs  debug.rs  descriptors.rs  lib.rs  material.rs  node_atlas.rs  persistent_component.rs  pieces.rs  pipeline.rs  plugin.rs  quad_tree.rs  quadtree.rs  quadtree_update.rs  spawn.rs  systems.rs  terrain.rs  terrain_view.rs  tile.rs  util.rs  viewer.rs
src/data_structures/: gpu_node_atlas.rs  gpu_quadtree.rs  mod.rs  node_atlas.rs  quadtree.rs
src/debug/: approximation_debug.rs  camera.rs  mod.rs  orbital_camera.rs
src/formats/: mod.rs  tc.rs  tdf.rs  tiff.rs
src/loader/: mod.rs  tdf.rs
src/math/: coordinate.rs  ellipsoid.rs  mod.rs  model_view_approximation.rs  node.rs  spheroid.rs  surface_approximation.rs  terrain_model.rs  terrain_shape.rs
src/picking/: mod.rs
src/preprocess/: attachment.rs  base.rs  config.rs  cube_map.rs  density.rs  down_sample.rs  file_io.rs  gpu_preprocessor.rs  mip_maps.rs  mod.rs  new.rs  node.rs  parse.rs  preprocess_pipeline.rs  preprocessor.rs  split.rs  stitch.rs
src/preprocess/shaders/: downsample.wgsl  mod.rs  preprocessing.wgsl  split.wgsl  stitch.wgsl
src/preprocess_gpu/: gpu_preprocessor.rs  mod.rs  preprocess_data.rs  preprocess_pipeline.rs  preprocessor.rs
src/preprocess_gpu/shaders/: downsample.wgsl  mod.rs  preprocessing.wgsl  split.wgsl  split_tile.wgsl  stitch.wgsl  stitch_nodes.wgsl
src/render/: albedo_attachment.rs  attachments.rs  bind_groups.rs  compute_data.rs  compute_pipeline.rs  compute_pipelines.rs  culling.rs  culling_bind_group.rs  gpu_node_atlas.rs  gpu_quadtree.rs  height_attachment.rs  height_map.rs  layouts.rs  mod.rs  pipeline.rs  preparation_data.rs  preparation_pipeline.rs  render_data.rs  render_pipeline.rs  resources.rs  terrain_bind_group.rs  terrain_data.rs  terrain_material.rs  terrain_pass.rs  terrain_pipeline.rs  terrain_view_bind_group.rs  terrain_view_data.rs  tiling_prepass.rs
src/render/shaders/: atlas.wgsl  attachments.wgsl  bindings.wgsl  build_atlas_map.wgsl  build_chunk_maps.wgsl  build_node_list.wgsl  build_patch_list.wgsl  config.wgsl  debug.wgsl  default.wgsl  entry_points.wgsl  functions.wgsl  mod.rs  node.wgsl  parameters.wgsl  patch.wgsl  prepare_indirect.wgsl  quadtree.wgsl  terrain.wgsl  tessellation.wgsl  test.wgsl  tile.wgsl  types.wgsl  uniforms.wgsl  update_quadtree.wgsl  utils.wgsl
src/render/shaders/compute/: parameters.wgsl  prepare_indirect.wgsl  refine_tiles.wgsl  tessellation.wgsl
src/render/shaders/render/: array_texture.wgsl  default.wgsl  fragment.wgsl  fragment_full.wgsl  fragment_old.txt  fragment_simple.wgsl  minmax.wgsl  vertex.wgsl
src/shaders/: attachments.wgsl  bindings.wgsl  debug.wgsl  depth_copy.wgsl  functions.wgsl  mod.rs  picking.wgsl  types.wgsl
src/shaders/preprocess/: preprocessing.wgsl  split.wgsl  stitch.wgsl
src/shaders/render/: default.wgsl  fragment.wgsl  vertex.wgsl
src/shaders/tiling_prepass/: prepare_indirect.wgsl  prepare_prepass.wgsl  refine_tiles.wgsl
src/terrain_data/: attachment.rs  coordinates.rs  gpu_atlas_attachment.rs  gpu_node_atlas.rs  gpu_quadtree.rs  gpu_tile_atlas.rs  gpu_tile_tree.rs  mod.rs  node_atlas.rs  quadtree.rs  readme.md  tile_atlas.rs  tile_loader.rs  tile_tree.rs
