[package]
name = "bevy_terrain"
description = "Terrain Rendering for the Bevy Engine."
version = "0.1.0-dev"
license = "MIT OR Apache-2.0"
edition = "2021"
categories = ["game-engines", "rendering", "graphics"]
keywords = ["gamedev", "graphics", "bevy", "terrain"]
exclude = ["assets/*"]
readme = "README.md"
authors = ["Kurt Kühnert <kurt@kuehnert.dev>"]
repository = "https://github.com/kurtkuehnert/bevy_terrain"

[features]
spherical = []

[dependencies]
bevy = "0.14.0-rc.3" #{ git="https://github.com/bevyengine/bevy/", branch="main" }
ndarray = "0.15"
itertools = "0.12"
image = "0.25"
tiff = "0.9"
lru = "0.12"
bitflags = "2.4"
strum = "0.26"
strum_macros = "0.26"
bytemuck = "1.14"
anyhow = "1.0"
bincode = "2.0.0-rc.3"
big_space = { git = "https://github.com/kurtkuehnert/big_space", branch = "bevy-0.14" }
async-channel = "2.1"

[[example]]
name = "preprocess_planar"
path = "examples/planar/preprocess_planar.rs"
required-features = ["bevy/embedded_watcher"]

[package.metadata.example.preprocess_planar]
name = "Preprocess Planar"
description = "Preprocesses the terrain data for the planar examples."

[[example]]
name = "basic"
path = "examples/planar/basic.rs"
required-features = ["bevy/embedded_watcher"]

[package.metadata.example.basic]
name = "Basic"
description = "Renders a basic flat terrain with only the base attachment."

[[example]]
name = "advanced"
path = "examples/planar/advanced.rs"
required-features = ["bevy/embedded_watcher"]

[package.metadata.example.advanced]
name = "Advanced"
description = "Renders a flat terrain with the base attachment and an albedo texture, using a custom shader."

[[example]]
name = "preprocess_spherical"
path = "examples/spherical/preprocess_spherical.rs"
required-features = ["spherical", "bevy/embedded_watcher"]

[package.metadata.example.preprocess_spherical]
name = "Preprocess Spherical"
description = "Preprocesses the terrain data for the spherical examples."

[[example]]
name = "spherical"
path = "examples/spherical/spherical.rs"
required-features = ["spherical", "bevy/embedded_watcher"]

[package.metadata.example.spherical]
name = "Spherical"
description = "Renders a spherical terrain using a custom shader."

