[package]
name = "bevy_terrain"
description = "Terrain Rendering for the Bevy Engine."
version = "0.1.0-dev"
license = "MIT OR Apache-2.0"
edition = "2021"
categories = ["game-engines", "rendering", "graphics"]
keywords = ["gamedev", "graphics", "bevy", "terrain"]
exclude = ["assets/*"]
readme = "README.md"
authors = ["Kurt Kühnert <kurt@kuehnert.dev>"]
repository = "https://github.com/kurtkuehnert/bevy_terrain"

[features]
high_precision = ["dep:big_space"]

[dependencies]
bevy = "0.14.0" #{ git="https://github.com/bevyengine/bevy/", branch="main" }
ndarray = "0.15"
itertools = "0.12"
image = "0.25"
tiff = "0.9"
lru = "0.12"
bitflags = "2.4"
bytemuck = "1.14"
anyhow = "1.0"
serde = "1.0.210"
ron = "0.8.1"
async-channel = "2.1"
big_space = { version = "0.7", optional = true }

[[example]]
name = "preprocess_planar"
path = "examples/preprocess_planar.rs"
required-features = ["bevy/embedded_watcher"]

[package.metadata.example.preprocess_planar]
name = "Preprocess Planar"
description = "Preprocesses the terrain data for the planar examples."

[[example]]
name = "minimal"
path = "examples/minimal.rs"
required-features = ["bevy/embedded_watcher"]

[package.metadata.example.minial]
name = "Minimal"
description = "Renders a basic flat terrain with only the base attachment."

[[example]]
name = "planar"
path = "examples/planar.rs"
required-features = ["high_precision", "bevy/embedded_watcher"]

[package.metadata.example.planar]
name = "Planar Advanced"
description = "Renders a flat terrain with the base attachment and an albedo texture, using a custom shader."

[[example]]
name = "preprocess_spherical"
path = "examples/preprocess_spherical.rs"
required-features = ["bevy/embedded_watcher"]

[package.metadata.example.preprocess_spherical]
name = "Preprocess Spherical"
description = "Preprocesses the terrain data for the spherical examples."

[[example]]
name = "spherical"
path = "examples/spherical.rs"
required-features = ["high_precision", "bevy/embedded_watcher"]

[package.metadata.example.spherical]
name = "Spherical"
description = "Renders a spherical terrain using a custom shader."

