[package]
name = "bevy_terrain"
description = "Terrain Rendering for the Bevy Engine."
version = "0.1.0-dev"
license = "MIT OR Apache-2.0"
edition = "2024"
categories = ["game-engines", "rendering", "graphics"]
keywords = ["gamedev", "graphics", "bevy", "terrain"]
exclude = ["assets/*"]
readme = "README.md"
authors = ["Kurt Kühnert <kurt@kuehnert.dev>"]
repository = "https://github.com/kurtkuehnert/bevy_terrain"

[workspace]
members = ["preprocess"]

[features]
high_precision = ["dep:big_space"]

[dependencies]
bevy = "0.15" #{ git="https://github.com/bevyengine/bevy/", branch="main" }
bevy_common_assets = { version = "0.12.0", features = ["ron"] }
big_space = { version = "0.9", optional = true }
tiff = "0.9"
bytemuck = "1.14"
ndarray = "0.16.1"
itertools = "0.14.0"
bitflags = "2.4"
anyhow = "1.0"
serde = "1.0.210"
ron = "0.8.1"
async-channel = "2.1"
derive_more = { version = "2.0.1", features = ["from"] }
slab = "0.4.9"
rand = "0.9.0"

[[example]]
name = "minimal"
path = "examples/minimal.rs"

[[example]]
name = "planar"
path = "examples/planar.rs"
required-features = ["high_precision"]

[[example]]
name = "spherical"
path = "examples/spherical.rs"
required-features = ["high_precision"]


[[example]]
name = "precision_demo"
path = "examples/precision_demo.rs"
required-features = ["high_precision"]
